# nep

./: .pre-commit-config.yaml  .semgrepignorerule  CHANGELOG.md  README.md  build.conf  build_dist.sh  neteye-nep.spec
.github/workflows/: check-single-nep-modification-limit.yaml
.tekton/: build-and-release.yaml  build-and-test.yaml  nep-build-and-release.yaml  nep-build-and-test.yaml
continuous-integration/: .gitignore
nep/: doc.md  get_full_objects_list.sh
nep-alyvix/itoa/: README.md
nep-alyvix/plugins/: check_alyvix3_testcase.pl
nep-centreon-plugins-base/: prerequisites.ini
nep-dbms-base/: prerequisites.ini
nep-dbms-hana/plugins/: check_hana.sh
nep-microsoft-365-portal/: README.md
nep-microsoft-365-portal/plugins/: check_office_services.py
nep-monitoring-asset/: prerequisites.ini
nep-monitoring-asset/plugins/: check_assetmanagement.pl
nep-monitoring-core/plugins/: check_rpm_mirror_sync.py
nep-monitoring-siem/plugins/: check_elastic_dataset_status.py  check_kibana_stats.sh
nep-monitoring-vmd/: README.md
nep-network-base/: README.md
nep-network-base/plugins/: check_traceroute
nep-network-dell-idrac/: README.md  prerequisites.ini
nep-network-messpc-ethernetbox/: README.md  prerequisites.ini
nep-network-pfsense-firewall/: README.md  prerequisites.ini
nep-network-sophos-firewall/: README.md
nep-network-ubiquiti-standard/: prerequisites.ini
nep-network-ups/plugins/: check_ups_health
nep-network-vectra/doc-images/: readme.txt
nep-notification-base/: README.md  prerequisites.ini
nep-notification-email/: README.md  prerequisites.ini
nep-notification-phonecall/: README.md  prerequisites.ini
nep-notification-phonecall/plugins/: phonecall-notification.sh
nep-notification-servicenow/: README.md
nep-notification-servicenow/plugins/: nx-notification-servicenow.py
nep-notification-sms/: README.md
nep-notification-sms/plugins/: nx-sms-with-ring-notification.py
nep-server-dns/: README.md
nep-server-ibm-as400/: README.md
nep-server-sap/: README.md
nep-storage-emc/: prerequisites.ini
nep-vmware-api/: prerequisites.ini
nep-vmware-vmd/: README.md  prerequisites.ini
nep-windows-server-exchange/: README.md
nep/setup/: .gitignore  Cargo.toml  README.md
nep/setup/conf/: fs_packages.json  nep.yaml
nep/setup/migration/: convert-nep-prerequisite-file.py
nep/setup/src/: bin.rs  context.rs  exec_env.rs  lib.rs  prerequisites.rs  status.rs
nep/setup/src/setup_step/: check_prerequisits.rs  copy_files.rs  import_basket.rs  run_install_scripts.rs  versioning.rs
nep/setup/templates/: script.sh
(+609 files in other folders)
