[package]
name = "nep-setup"
version = "0.1.8"
edition = "2021"
description = "NetEye-Package manager"

[dependencies]
log = "0.4.17"
clap = { version = "4.0.0", features = ["derive", "cargo"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0"
glob = "0.3.0"
toml = "0.5.9"
regex = "1"
lazy_static = "1.4.0"
anyhow = { version = "1.0.64", features = ["backtrace"] }
nix = "0.26.1"
semver = "1.0.13"
ctrlc = "3.2.4"
strsim = "0.10.0"
reqwest = { version = "0.11.14", features = [
    "gzip", "blocking", "deflate", "json", "serde_json",
    "mime_guess", "brotli", "rustls-tls"
], default-features = false}
pretty_env_logger = "0.4.0"
colored = "2.0.0"
rand = "0.8.5"

[build-dependencies]
built = { version = "0.7", features = ["git2"] }
chrono = "0.4.39"

[lib]
name = "libnep"
path = "src/lib.rs"

[[bin]]
name = "nep-setup"
path = "src/bin.rs"

[profile.release]
strip = true
opt-level = "z"
codegen-units=1
lto = "fat"
overflow-checks = true   # Enable integer overflow checks.
debug = false            # Include debug info.
debug-assertions = true  # Enables debug assertions.

[profile.release-debug]
inherits = "release"
strip = false
debug = true            # Include debug info.
